--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,24 @@ pom.xml.asc
 /.nrepl-port
 .hgignore
 .hg/
+
+resources/public/js
+currency_client/node_modules
+currency_client/.shadow-cljs
+/target
+/checkouts
+/src/gen
+.calva/output-window
+pom.xml
+pom.xml.asc
+*.iml
+*.jar
+*.log
+.shadow-cljs
+.idea
+.lein-*
+.nrepl-*
+.DS_Store
+
+.hgignore
+.hg/
